# bare-quads

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core_2d/: box_2d.rs  drawable_2d.rs  drawable_state_2d.rs  mod.rs  pipeline_2d.rs  text_2d.rs
src/math/: color.rs
src/renderer/: mod.rs  ui.wgsl
