[package]
name = "rustyfun"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster="*"
cgmath="*"
bytemuck = { version = "1.12", features = [ "derive" ] }
wgpu_glyph = { git = "https://github.com/hecrj/wgpu_glyph" }

[dependencies.bitflags]
version = "2.4.1"